# Cuda-Kernel-Optimization-Introduction-

./: .gitignore  CMakeLists.txt  README.md  convolution.cpp  convolution.h  hip_gmm  image_processing.cpp  image_processing.h  main.cpp  stb_impl.cpp
input_image/: input_2k.jpg:Zone.Identifier  input_4k.jpg:Zone.Identifier
